<resources>
    <string name="app_name">GeoQuiz</string>

    <!--    UI-->

    <!--    Buttons-->
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>

    <!--    TextViews-->
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="api_level_text">API Level %1$d</string>
    <string name="cheats_left_text">%1$d cheats left</string>

    <!--    Toasts-->
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="score_toast">Final score: </string>
    <string name="judgment_toast">Cheating is wrong</string>

    <!--    Questions-->
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
</resources>