<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        tools:text="@string/question_australia" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/true_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"/>

    <TextView
        android:id="@+id/cheats_left_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        tools:text="3 cheats left"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp">

        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/prev_button"
            android:src="@drawable/arrow_left" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:contentDescription="@string/next_button"
            android:src="@drawable/arrow_right" />

    </LinearLayout>

    <TextView
        android:id="@+id/api_level_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="API Level 31"/>

</LinearLayout>